# AMGLib-Plus

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/amgpp_test/: CMakeLists.txt  amgpp_test.cpp
examples/basicobjects/: CMakeLists.txt  basicobjects.cpp
examples/basicobjects/assets/: scene.mtl
examples/celshading/: CMakeLists.txt  celshading.c
examples/convexobjects/: CMakeLists.txt  convexobjects.c
examples/convexobjects/assets/: lego.mtl
examples/heightmaps/: CMakeLists.txt  heightmaps.c
examples/lights/: CMakeLists.txt  lights.cpp
examples/mode2d/: CMakeLists.txt  mode2d.cpp
examples/mp3player/: CMakeLists.txt  mp3player.c
examples/multitexturing/: .gitignore  CMakeLists.txt  multitexturing.c
examples/multitexturing/assets/: bkg.mtl  worms3d_planet.mtl
examples/oslib/: CMakeLists.txt  oslib.cpp
examples/oslib/assets/: tie-fighter.mtl
examples/platform2d/: CMakeLists.txt  platform2d.c
examples/reflection/: CMakeLists.txt  reflection.cpp
examples/rendertotexture/: CMakeLists.txt  rendertotexture.c
examples/rendertotexture/assets/: sstars.mtl
examples/template/: CMakeLists.txt
examples/utility/: CMakeLists.txt
include/AMG/: 3d.h  AMGLib.h  AMGPPLib.h  model.h  multimedia.h  physics.h  texture.h  thread.h  user.h
src/: 3d.cpp  animation.cpp  model.cpp  multimedia.cpp  physics.cpp  texture.cpp  thread.cpp  user.cpp  vfpu.cpp
